--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -50,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.6",
     "@types/styled-components": "^5.1.26"
   },
   "homepage": "https://dev-ycy.github.io/coinsite"
